[package]
name = "broomstick"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fern = "^0.6"
glium = "^0.32"
glm = "^0.2"
humantime = "^2.1"
log = "^0.4"
png = "^0.17"
tokio = { version = "1.28", features = ["full"]}
num = "^0.4"
uuid = { version = "^1.4.0", features = ["v4", "fast-rng"]}
anyhow = "^1.0.75"
